feat(interview): move interview dialog to a single Claude interviewer agent
- replace the Yandex question-generator + follow-up-decision duo with one Claude "interviewer" agent that plans the interview and drives an adaptive dialogue turn by turn, tracking the main-question count itself instead of trusting the LLM
- add Anthropic client/config wiring (ClaudeClient, AnthropicConfig/Properties) with the prompt sent as the first user block and cache breakpoints, since provod.ai strips the system block
- extend interview.session/question with plan_topics, kind and topic (migration V3) so a session tracks the plan and each question's role in it
- rework InterviewService/InterviewWriter/InterviewQuestionRepository around plan-driven sessions (createSession from plan, saveStep, closeQuestioning) and drop the now-unused Yandex follow-up DTOs and IQG/IFU config keys
- update tests and docs/interview-api.md for the new mechanics